--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.5.2"
+    "mysql2": "^3.5.2",
+    "tzdata": "^1.0.38"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
